--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -428,14 +428,20 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'We have 5693 users and 47711 items.'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -463,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -509,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -544,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -584,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -596,18 +602,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The Density Score is 0.0004009664679853458.'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_density_score(matrix):\n",
     "    \"\"\"\n",
@@ -627,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -704,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -716,88 +711,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>User-ID</th>\n",
-       "      <th>ISBN</th>\n",
-       "      <th>Book-Rating</th>\n",
-       "      <th>Genre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1155</td>\n",
-       "      <td>0451402103</td>\n",
-       "      <td>8</td>\n",
-       "      <td>True Crime</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1155</td>\n",
-       "      <td>0671689231</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Biography &amp; Autobiography</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>70052</td>\n",
-       "      <td>0671689231</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Biography &amp; Autobiography</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>98904</td>\n",
-       "      <td>0671689231</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Biography &amp; Autobiography</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>110029</td>\n",
-       "      <td>0671689231</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Biography &amp; Autobiography</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   User-ID        ISBN  Book-Rating                      Genre\n",
-       "0     1155  0451402103            8                 True Crime\n",
-       "1     1155  0671689231            7  Biography & Autobiography\n",
-       "2    70052  0671689231            7  Biography & Autobiography\n",
-       "3    98904  0671689231            6  Biography & Autobiography\n",
-       "4   110029  0671689231            8  Biography & Autobiography"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_book_ratings_df(ratings_: pd.DataFrame, books_info_: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -819,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -890,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -923,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -989,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1030,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1096,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1135,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1201,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1223,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1287,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1323,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1415,8 +1329,12 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
+    "    # raise NotImplementedError()\n",
+    "    return (df.groupby(['Genre', 'ISBN'])\n",
+    "                .agg({'Book-Rating': 'mean'})\n",
+    "                .reset_index().sort_values('Book-Rating', ascending=False)\n",
+    "                .groupby(['Genre'])\n",
+    "                .head(3))\n",
     "top3_rates_genre = get_top3_rates_genre(book_ratings)\n",
     "top3_rates_genre"
    ]
@@ -1526,7 +1444,7 @@
     "\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "\n",
     "get_3_booksets = get_apriori_booksets(R, min_support=0.003, n=3, m=3)"
    ]
@@ -1560,7 +1478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "blu10",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
