--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -428,20 +428,14 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "'We have 5693 users and 47711 items.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -469,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -515,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -550,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -590,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -602,7 +596,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Density Score is 0.0004009664679853458.'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_density_score(matrix):\n",
     "    \"\"\"\n",
@@ -622,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -699,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -711,7 +716,88 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User-ID</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Rating</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0451402103</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>70052</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>98904</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110029</td>\n",
+       "      <td>0671689231</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Biography &amp; Autobiography</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User-ID        ISBN  Book-Rating                      Genre\n",
+       "0     1155  0451402103            8                 True Crime\n",
+       "1     1155  0671689231            7  Biography & Autobiography\n",
+       "2    70052  0671689231            7  Biography & Autobiography\n",
+       "3    98904  0671689231            6  Biography & Autobiography\n",
+       "4   110029  0671689231            8  Biography & Autobiography"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_book_ratings_df(ratings_: pd.DataFrame, books_info_: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -733,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -804,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -837,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -903,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -944,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1010,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1049,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1115,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1137,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1201,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1237,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1303,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1315,7 +1401,127 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21319</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>0595287441</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37319</th>\n",
+       "      <td>Performing Arts</td>\n",
+       "      <td>1566631580</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11146</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>031220387X</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37341</th>\n",
+       "      <td>Pet shops</td>\n",
+       "      <td>0307111822</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11159</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>0312206143</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31271</th>\n",
+       "      <td>Inside Passage</td>\n",
+       "      <td>1929976011</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28838</th>\n",
+       "      <td>HEALTH &amp; FITNESS</td>\n",
+       "      <td>0874779588</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38847</th>\n",
+       "      <td>Real estate investment</td>\n",
+       "      <td>067150469X</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41932</th>\n",
+       "      <td>Teenagers</td>\n",
+       "      <td>0439062748</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41791</th>\n",
+       "      <td>Steel industry and trade</td>\n",
+       "      <td>0380718227</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3921 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Genre        ISBN  Book-Rating\n",
+       "21319                   Fiction  0595287441         10.0\n",
+       "37319           Performing Arts  1566631580         10.0\n",
+       "11146                   Fiction  031220387X         10.0\n",
+       "37341                 Pet shops  0307111822         10.0\n",
+       "11159                   Fiction  0312206143         10.0\n",
+       "...                         ...         ...          ...\n",
+       "31271            Inside Passage  1929976011          1.0\n",
+       "28838          HEALTH & FITNESS  0874779588          1.0\n",
+       "38847    Real estate investment  067150469X          1.0\n",
+       "41932                 Teenagers  0439062748          1.0\n",
+       "41791  Steel industry and trade  0380718227          1.0\n",
+       "\n",
+       "[3921 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_top3_rates_genre(df):\n",
     "    \n",
@@ -1341,16 +1547,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21319</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>0595287441</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11146</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>031220387X</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11159</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>0312206143</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Genre        ISBN  Book-Rating\n",
+       "21319  Fiction  0595287441         10.0\n",
+       "11146  Fiction  031220387X         10.0\n",
+       "11159  Fiction  0312206143         10.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top3_rates_genre[top3_rates_genre['Genre']=='Fiction']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1413,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1442,16 +1709,16 @@
     "                   ordered by support in descending order\n",
     "    \"\"\"\n",
     "\n",
-    "    \n",
+    "    ap_df = apriori(pd.DataFrame(R > 0), min_support=min_support, max_len=m)\n",
+    "    return ap_df[ap_df.itemsets.apply(lambda x: len(x))==m].nlargest(n, columns='support')\n",
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
-    "\n",
     "get_3_booksets = get_apriori_booksets(R, min_support=0.003, n=3, m=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1474,6 +1741,13 @@
     "assert 15979 in get_3_booksets.reset_index()['itemsets'][0]\n",
     "assert 16130 in get_3_booksets.reset_index()['itemsets'][1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
